test/sema/typeck/assign/reassign-struct-variable.dora
struct Point(Int32, Int32)

fn main() {
    let _p = Point(1i32, 2i32);
    _p = Point(3i32, 4i32);
}
